[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/GUI/SceneGUI.gd" type="Script" id=1]

[node name="SceneGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="SceneTitleLabel" type="Label" parent="CenterContainer"]
margin_left = 456.0
margin_right = 537.0
margin_bottom = 14.0
text = "Scene Demo"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -172.0
margin_top = -62.0
margin_right = -36.0
margin_bottom = -22.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 149.0
margin_bottom = 40.0
custom_constants/separation = 17

[node name="ResetScene" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 40.0
text = "Reset Scene"

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 149.0
margin_bottom = 40.0
text = "Back"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ResetScene" to="." method="_on_ResetScene_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
